creation of article functionality, their viewing, scrolling, hover effect, as well as highlighting the next element that should come after the current one

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "emigration-to-other-countries",
+  "$schema": "./package.schema.json",
+  "name": "eatly",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
